--- a/styles.css
+++ b/styles.css
@@ -146,6 +146,9 @@ body {
 @media (max-width: 990px) {
     body {
         width: 80%;
+        background-image: url(./images/bg-mobile.svg);
+        background-size: contain;
+
     }
     
     .main {        
@@ -172,6 +175,8 @@ body {
 @media (max-width: 576px) {
     body {
         width: 90%;
+        
+       
     }
 
     .header__logo-img {
