--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ body {
     background-color: var(--color-body);
     background-image: url(./images/bg-desktop.svg);
     background-repeat: no-repeat;
+    background-size: cover;
     color: #fff;
     width: 80%;
     min-height: 100vh;
